--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -160,5 +160,70 @@
   "canExplore": " peuvent explorer et postuler pour\ndes opportunités dans le ",
   "jobPortfolio": " portefeuille d'emplois",
   "werkr": "WERKR",
-  "letsLogin": "Connectons-nous. Postulez aux emplois !"
+  "letsLogin": "Connectons-nous. Postulez aux emplois !",
+  "errorOccured": "Une erreur inattendue s'est produite !",
+  "pageNotFound": "Cette page n'a pas été trouvée !",
+  "availableJobs": "Emplois disponibles",
+  "recentlyApplied": "Récemment postulé",
+  "failedToRetrieveLocation": "Impossible de récupérer la distance jusqu'à l'emplacement, vous êtes peut-être trop loin !",
+  "noHistory": "Pas d'historique pour la période donnée",
+  "allowMedia": "Veuillez autoriser l'utilisation de la bibliothèque multimédia dans les paramètres de votre appareil !",
+  "chooseFromLibrary": "Choisir dans la bibliothèque",
+  "removeCurrentPicture": "Supprimer l'image actuelle",
+  "takePhoto": "Prendre une photo",
+  "totalHours": "Heures totales",
+  "all": "Tout",
+  "confirm": "Confirmer",
+  "confirmWorkingTimes": "Confirmer les heures de travail",
+  "searchLocation": "Rechercher votre emplacement",
+  "setLocationOnMap": "Définir votre emplacement sur la carte",
+  "tapToSign": "Appuyez pour signer",
+  "workerSignature": "Signature du travailleur",
+  "clientSignature": "Signature du client",
+  "adjustPin": "Ajuster l'épingle",
+  "whatTypeOfJob": "Quel type d'emplois vous intéresse ?",
+  "howExperienced": "Quelle est votre expérience ?",
+  "checkYourMail": "Vérifiez votre e-mail",
+  "requestPasswordReset": "Demander la réinitialisation du mot de passe",
+  "enterYourEmail": "Saisissez l'adresse e-mail que vous avez utilisée lors de votre inscription et nous vous enverrons les instructions pour réinitialiser votre mot de passe.",
+  "weSentYourPasswordRecovery": "Nous avons envoyé une réinitialisation de mot de passe à\nvotre adresse e-mail",
+  "howExperiencedDescription": "Veuillez remplir ceci aussi honnêtement que possible.",
+  "whenAreYouLikelyToWork": "Quand êtes-vous le plus susceptible de travailler ?",
+  "whenAreYouLikelyToWorkDescription": "Assurez-vous de remplir ceci avec précision.",
+  "youHaveRegistered": "Vous vous êtes inscrit.",
+  "weWillReviewYourRegistration": "Nous examinerons bientôt votre inscription !",
+  "whatYourLookingFor": "Dites-nous ce que vous recherchez.",
+  "deleteApplication": "Supprimer la candidature",
+  "yourSituation": "Quelle est votre situation actuelle ?",
+  "ensureAccuracy": "Assurez-vous de remplir ceci avec précision.",
+  "yesDelete": "Oui, supprimer",
+  "preferredLocations": "Quels sont vos emplacements préférés ?",
+  "preferredLocationsDescription": "Sélectionnez vos lieux de travail favoris.",
+  "firstName": "Prénom",
+  "youBeenRegistered": "Vous avez été inscrit",
+  "youBeenRegisteredDescription": "Nous examinerons bientôt\nvotre inscription !",
+  "surname": "Nom de famille",
+  "yourName": "Votre nom",
+  "agreeToOur": "En vous inscrivant, vous acceptez nos ",
+  "ago": "il y a",
+  "letsCreateYourAccountHere": "Créons votre compte ici.",
+  "getStarted": "Commencer",
+  "fillInAllFields": "Veuillez remplir tous les champs",
+  "noNotificationsForLast7Days": "Pas de notifications pour les 7 derniers jours",
+  "moreThan30DaysAgo": "Il y a plus de 30 jours",
+  "justNow": "À l'instant",
+  "notifications": "Notifications",
+  "deleteAccountConfirmation": "Êtes-vous sûr de vouloir supprimer votre compte ?",
+  "no": "Non",
+  "overview": "Aperçu",
+  "applicationSent": "Candidature envoyée !",
+  "applicationSentDescription": "Merci pour votre candidature, nous reviendrons vers vous dès que possible.",
+  "breakCopy": "Pause",
+  "registerTime": "Enregistrer l'heure",
+  "seeMore": "Voir plus",
+  "seeLess": "Voir moins",
+  "note": "Note",
+  "writeNoteHere": "Écrivez votre note ici...",
+  "downloadYourDayContract": "Télécharger votre contrat journalier",
+  "scheduledJobs": "Travaux programmés"
 }
