--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -160,5 +160,70 @@
   "canExplore": " kunnen verkennen en solliciteren\nvoor kansen binnen de ",
   "jobPortfolio": " job portfolio",
   "werkr": "WERKR",
-  "letsLogin": "Laten we inloggen. Solliciteer op jobs!"
+  "letsLogin": "Laten we inloggen. Solliciteer op jobs!",
+  "errorOccured": "Er is een onverwachte fout opgetreden!",
+  "pageNotFound": "Deze pagina werd niet gevonden!",
+  "availableJobs": "Beschikbare jobs",
+  "recentlyApplied": "Recent gesolliciteerd",
+  "failedToRetrieveLocation": "Kon de afstand tot de locatie niet ophalen, je bent mogelijk te ver weg!",
+  "noHistory": "Geen geschiedenis voor gegeven tijdsperiode",
+  "allowMedia": "Sta het gebruik van de mediabibliotheek toe in je apparaatinstellingen!",
+  "chooseFromLibrary": "Kies uit bibliotheek",
+  "removeCurrentPicture": "Huidige foto verwijderen",
+  "takePhoto": "Maak een foto",
+  "totalHours": "Totaal uren",
+  "all": "Alle",
+  "confirm": "Bevestigen",
+  "confirmWorkingTimes": "Werktijden bevestigen",
+  "searchLocation": "Zoek je locatie",
+  "setLocationOnMap": "Stel je locatie in op de kaart",
+  "tapToSign": "Tik om te ondertekenen",
+  "workerSignature": "Handtekening werker",
+  "clientSignature": "Handtekening klant",
+  "adjustPin": "Pin aanpassen",
+  "whatTypeOfJob": "Welk type jobs interesseren je?",
+  "howExperienced": "Hoeveel ervaring heb je?",
+  "checkYourMail": "Controleer je e-mail",
+  "requestPasswordReset": "Wachtwoord reset aanvragen",
+  "enterYourEmail": "Voer het e-mailadres in dat je gebruikte bij registratie en we sturen je instructies om je wachtwoord te resetten.",
+  "weSentYourPasswordRecovery": "We hebben een wachtwoord reset gestuurd naar\nje e-mailadres",
+  "howExperiencedDescription": "Vul dit zo eerlijk mogelijk in.",
+  "whenAreYouLikelyToWork": "Wanneer werk je waarschijnlijk?",
+  "whenAreYouLikelyToWorkDescription": "Zorg ervoor dat je dit nauwkeurig invult.",
+  "youHaveRegistered": "Je bent geregistreerd.",
+  "weWillReviewYourRegistration": "We zullen je registratie binnenkort bekijken!",
+  "whatYourLookingFor": "Laat ons weten waar je naar zoekt.",
+  "deleteApplication": "Sollicitatie verwijderen",
+  "yourSituation": "Wat beschrijft je huidige situatie het beste?",
+  "ensureAccuracy": "Zorg ervoor dat je dit nauwkeurig invult.",
+  "yesDelete": "Ja, verwijderen",
+  "preferredLocations": "Wat zijn je voorkeurslocaties?",
+  "preferredLocationsDescription": "Selecteer je favoriete werklocaties.",
+  "firstName": "Voornaam",
+  "youBeenRegistered": "Je bent geregistreerd",
+  "youBeenRegisteredDescription": "We zullen je registratie\nbinnenkort bekijken!",
+  "surname": "Achternaam",
+  "yourName": "Je naam",
+  "agreeToOur": "Door je aan te melden ga je akkoord met onze ",
+  "ago": "geleden",
+  "letsCreateYourAccountHere": "Laten we hier je account aanmaken.",
+  "getStarted": "Aan de slag",
+  "fillInAllFields": "Vul alle velden in",
+  "noNotificationsForLast7Days": "Geen meldingen voor de laatste 7 dagen",
+  "moreThan30DaysAgo": "Meer dan 30 dagen geleden",
+  "justNow": "Zojuist",
+  "notifications": "Meldingen",
+  "deleteAccountConfirmation": "Weet je zeker dat je je account wilt verwijderen?",
+  "no": "Nee",
+  "overview": "Overzicht",
+  "applicationSent": "Sollicitatie verzonden!",
+  "applicationSentDescription": "Bedankt voor je sollicitatie, we komen zo snel mogelijk bij je terug.",
+  "breakCopy": "Pauze",
+  "registerTime": "Tijd registreren",
+  "seeMore": "Meer zien",
+  "seeLess": "Minder zien",
+  "note": "Notitie",
+  "writeNoteHere": "Schrijf je notitie hier...",
+  "downloadYourDayContract": "Download je dagcontract",
+  "scheduledJobs": "Geplande jobs"
 }
