--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,55 +1,150 @@
 {
-  "oops": "Oops...",
-  "newCopy": "New",
-  "customer": "Customer",
-  "customerName": "Customer name",
-  "createNewCustomer": "Create new Customer",
-  "hours": "Hours",
-  "email": "E-mail",
-  "next": "Next",
-  "welcomeToWerkr": "Welcome to WERKR",
-  "becomeAWerkr": "Become a WERKR",
-  "alreadyAWerkr": "Already a WERKR",
-  "workWithWerkr": "Work with WERKR,\nfast & easy",
-  "emailAddress": "Email address",
-  "forgotPassword": "Forgot password?",
-  "resetPassword": "Reset password",
-  "confirmPassword": "Confirm password",
-  "passwordsDoNotMatch": "Passwords do not match",
-  "createANewPassword": "Create a new password",
-  "setYourPassword": "Set your new password so you can login and access WERKR",
-  "passwordHasBeenReset": "Your password has been reset!",
-  "youCanNowLogin":"You can now login with your new password", 
-  "dontHaveAnAccount": "Don't have an account?",
-  "register": "Register",
-  "verifyYourEmail": "Verify your email",
-  "verifyYourEmailDescription": "To verify your identity, please enter the code we sent to your email address.",
-  "verificationCode": "Verification code",
-  "yourCode": "Your code",
-  "phone": "Phone",
-  "customers": "Customers",
-  "welcomeBack": "Welcome back",
-  "unserviced": "Unserviced",
-  "onAverage": "On average",
-  "name": "Name",
-  "Phone": "Phone",
-  "Company": "Company",
-  "washer": "Washer",
-  "addNewWasher": "Add new washer",
-  "createNewJob": "Create new job",
-  "dutch": "Dutch",
-  "french": "French",
-  "english": "English",
-  "registered": "Registered",
-  "active": "Active",
+  "all": "All",
+  "apply": "Apply",
+  "back": "Back",
+  "both": "Both",
+  "confirm": "Confirm",
+  "copied": "Copied",
   "duplicate": "Duplicate",
   "Edit": "Edit",
+  "filter": "Filter",
+  "goBack": "Go back",
+  "h": "h",
+  "more": "More",
+  "name": "Name",
+  "newCopy": "New",
+  "next": "Next",
+  "no": "No",
+  "noItems": "No items",
+  "paramPerPage": "{item} per page",
+  "ofParamPages": "out of {pages} pages",
+  "paramOfParamParam": "{range} of the {total} {item}",
+  "search": "Search",
+  "seeMore": "See more",
+  "seeLess": "See less",
+  "select": "Select",
+  "viewAll": "View all",
+  "viewMore": "View more",
+  "agreeToOur": "By signing up, you agree to our ",
+  "alreadyAWerkr": "Already a WERKR",
+  "becomeAWerkr": "Become a WERKR",
+  "confirmPassword": "Confirm password",
+  "createANewPassword": "Create a new password",
+  "deleteMyAccount": "Delete my account",
+  "deleteAccountConfirmation": "Are you sure you want to delete your account?",
+  "dontHaveAnAccount": "Don't have an account?",
+  "email": "E-mail",
+  "emailAddress": "Email address",
+  "enterYourEmail": "Enter the email address you used when you joined and we'll send you instructions to reset your password.",
+  "fillInAllFields": "Please fill in all fields",
+  "forgotPassword": "Forgot password?",
+  "getStarted": "Get Started",
+  "letsCreateYourAccountHere": "Let's create your account here.",
+  "letsLogin": "Let's log in. Apply to jobs!",
+  "logout": "Logout",
+  "password": "Password",
+  "passwordHasBeenReset": "Your password has been reset!",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "register": "Register",
+  "resetPassword": "Reset password",
+  "setYourPassword": "Set your new password so you can login and access WERKR",
+  "verificationCode": "Verification code",
+  "verifyYourEmail": "Verify your email",
+  "verifyYourEmailDescription": "To verify your identity, please enter the code we sent to your email address.",
+  "youBeenRegistered": "You've been registered",
+  "youBeenRegisteredDescription": "We will review your\n  registration soon!",
+  "youCanNowLogin": "You can now login with your new password",
+  "yourCode": "Your code",
+  "history": "History",
+  "home": "Home",
+  "jobs": "Jobs",
+  "licenses": "Licenses",
+  "overview": "Overview",
+  "privacyPolicy": "Privacy policy",
+  "profile": "Profile",
+  "settings": "Settings",
+  "statistics": "Statistics",
+  "termsAndConditions": "Terms & conditions",
+  "applications": "Applications",
+  "applicationSent": "Application sent!",
+  "applicationSentDescription": "Thank you for your application, we'll get back to you as soon as possible.",
+  "applyForJob": "Apply for job",
+  "availableJobs": "Available jobs",
+  "completedJobs": "Completed jobs",
+  "createNewJob": "Create new job",
+  "hours": "Hours",
+  "jobInfo": "Job info",
+  "jobPortfolio": " job portfolio",
+  "jobsDoneThisWeek": "Jobs done this week",
+  "jobsScheduledThisWeek": "Jobs scheduled this week",
+  "jobsDoneThisMonth": "Jobs done this year",
+  "jobsScheduledThisMonth": "Jobs scheduled this year",
+  "myJobs": "My jobs",
+  "noAppliedJobs": "No applied jobs",
+  "noJobs": "No jobs",
+  "note": "Note",
+  "productivity": "Productivity",
+  "recentlyApplied": "Recently applied",
+  "scheduledJobs": "Scheduled jobs",
+  "totalHours": "Total hours",
+  "upcomingJobs": "Upcoming jobs",
+  "writeNoteHere": "Write your note here...",
   "automaticallyLogOutAfter": "Automatically log out after",
   "afterOneHour": "One hour",
   "afterOneDay": "One Day",
   "afterOneWeek": "One Week",
+  "Company": "Company",
+  "customer": "Customer",
+  "customers": "Customers",
+  "customerName": "Customer name",
+  "createNewCustomer": "Create new Customer",
+  "dateOfBirth": "Date of birth",
+  "firstName": "First name",
+  "language": "Language",
+  "notifications": "Notifications",
   "notification": "Notification",
-  "both": "Both",
+  "phone": "Phone",
+  "Phone": "Phone",
+  "phoneNumber": "Phone number",
+  "surname": "Surname",
+  "washer": "Washer",
+  "washers": "Washers",
+  "addNewWasher": "Add new washer",
+  "yourName": "Your name",
+  "ago": "ago",
+  "anytime": "Anytime",
+  "breakCopy": "Break",
+  "breakTime": "Break time",
+  "confirmTimes": "Confirm times",
+  "confirmWorkingTimes": "Confirm working times",
+  "dateAndTime": "Date & Time",
+  "downloadYourDayContract": "Download your day contract",
+  "earlier": "Earlier",
+  "endTime": "End time",
+  "from": "From",
+  "iEndedAt": "I ended at:",
+  "iStartedAt": "I started at:",
+  "lastMonth": "Last month",
+  "lastWeek": "Last week",
+  "lastYear": "Last year",
+  "month": "Year",
+  "moreThan30DaysAgo": "More than 30 days ago",
+  "registerTime": "Register time",
+  "selectDates": "Select Dates",
+  "selectTimes": "Select Times",
+  "startTime": "Start time",
+  "thisMonth": "This month",
+  "thisWeek": "This week",
+  "thisYear": "This year",
+  "until": "Until",
+  "week": "Week",
+  "sun": "Sun",
+  "mon": "Mon",
+  "tue": "Tue",
+  "wed": "Wed",
+  "thu": "Thu",
+  "fri": "Fri",
+  "sat": "Sat",
   "january": "January",
   "february": "February",
   "march": "March",
@@ -62,103 +157,53 @@
   "october": "October",
   "november": "November",
   "december": "December",
-  "hi": "Hi",
-  "productivity": "Productivity",
-  "week": "Week",
-  "month": "Year",
-  "jobsDoneThisWeek": "Jobs done this week",
-  "jobsScheduledThisWeek": "Jobs scheduled this week",
-  "jobsDoneThisMonth": "Jobs done this year",
-  "jobsScheduledThisMonth": "Jobs scheduled this year",
-  "setLocation": "Set location ",
-  "search": "Search",
-  "items": "Items",
-  "outOfAllPlannedJobs": "Out of all planned jobs",
-  "outOfAllJobs": "Out of all jobs",
-  "paramPerPage": "{item} per page",
-  "ofParamPages": "out of {pages} pages",
-  "paramOfParamParam": "{range} of the {total} {item}",
-  "applications": "Applications",
-  "washers": "Washers",
-  "back": "Back",
-  "viewMore": "View more",
-  "dateAndTime": "Date & Time",
-  "location": "Location",
-  "iAmPayingForMyOwnTransport": "I am paying for my own transport",
-  "iAmNotPayingForMyOwnTransport": "I am not paying for my own transport",
-  "fromYou": "From you",
-  "jobInfo": "Job info",
-  "anytime": "Anytime",
-  "thisWeek": "This week",
-  "thisMonth": "This month",
-  "lastWeek": "Last week",
-  "lastMonth": "Last month",
-  "thisYear": "This year",
-  "lastYear": "Last year",
-  "earlier": "Earlier",
-  "upcomingJobs": "Upcoming jobs",
-  "myJobs": "My jobs",
-  "viewAll": "View all",
-  "selectDates": "Select Dates",
-  "selectTimes": "Select Times",
-  "sun": "Sun",
-  "mon": "Mon",
-  "tue": "Tue",
-  "wed": "Wed",
-  "thu": "Thu",
-  "fri": "Fri",
-  "sat": "Sat",
-  "address": "Address",
-  "dateOfBirth": "Date of birth",
-  "phoneNumber": "Phone number",
-  "language": "Language",
-  "password": "Password",
-  "logout": "Logout",
-  "profile": "Profile",
-  "more": "More",
-  "termsAndConditions": "Terms & conditions",
-  "privacyPolicy": "Privacy policy",
-  "licenses": "Licenses",
-  "apply": "Apply",
-  "approved": "Approved",
-  "rejected": "Rejected",
-  "pending": "Pending",
-  "applyForJob": "Apply for job",
-  "cancelled": "Cancelled",
-  "completed": "Completed",
-  "completedJobs": "Completed jobs",
-  "home": "Home",
-  "statistics": "Statistics",
-  "jobs": "Jobs",
-  "history": "History",
-  "settings": "Settings",
-  "select": "Select",
-  "deleteMyAccount": "Delete my account",
-  "iStartedAt": "I started at:",
-  "iEndedAt": "I ended at:",
-  "confirmTimes": "Confirm times",
-  "noJobs": "No jobs",
-  "noItems": "No items",
-  "noAppliedJobs": "No applied jobs",
-  "startAddress": "Start address",
-  "chooseLocation": "Choose location",
-  "from": "From",
-  "until": "Until",
-  "filter": "Filter",
-  "startTime": "Start time",
-  "endTime": "End time",
-  "h": "h",
-  "copied": "Copied",
+  "codeIncorrect": "Are you sure the given code is correct?",
+  "denied": "Denied",
+  "errorOccured": "An unexpected error occurred!",
+  "failedToRetrieveLocation": "Failed to retrieve distance to the location, you might be too far away!",
+  "gotCopiedToYourClipboard": "got copied to your clipboard",
+  "noHistory": "No history for given time frame",
+  "noNotificationsForLast7Days": "No notifications for last 7 days",
+  "oops": "Oops...",
+  "pageNotFound": "This page was not found!",
   "something": "Something",
   "somethingWentWrong": "Something went wrong, we're aware!",
-  "codeIncorrect": "Are you sure the given code is correct?",
-  "gotCopiedToYourClipboard": "got copied to your clipboard",
-  "denied": "Denied",
-  "goBack": "Go back",
-  "breakTime": "Break time",
   "aPlatformWhere": "A platform where students and flexi's\nfrom ",
   "canExplore": " can explore and apply for\nopportunities within the ",
-  "jobPortfolio": " job portfolio",
+  "hi": "Hi",
   "werkr": "WERKR",
-  "letsLogin": "Let’s log in. Apply to jobs!"
+  "welcomeBack": "Welcome back",
+  "welcomeToWerkr": "Welcome to WERKR",
+  "workWithWerkr": "Work with WERKR,\nfast & easy",
+  "address": "Address",
+  "adjustPin": "Adjust the pin",
+  "chooseLocation": "Choose location",
+  "iAmPayingForMyOwnTransport": "I am paying for my own transport",
+  "iAmNotPayingForMyOwnTransport": "I am not paying for my own transport",
+  "location": "Location",
+  "searchLocation": "Search your location",
+  "setLocation": "Set location ",
+  "setLocationOnMap": "Set your location on the map",
+  "startAddress": "Start address",
+  "active": "Active",
+  "approved": "Approved",
+  "cancelled": "Cancelled",
+  "completed": "Completed",
+  "dutch": "Dutch",
+  "english": "English",
+  "french": "French",
+  "fromYou": "From you",
+  "items": "Items",
+  "justNow": "Just now",
+  "onAverage": "On average",
+  "outOfAllJobs": "Out of all jobs",
+  "outOfAllPlannedJobs": "Out of all planned jobs",
+  "pending": "Pending",
+  "registered": "Registered",
+  "rejected": "Rejected",
+  "tapToSign": "Tap to sign",
+  "unserviced": "Unserviced",
+  "workerSignature": "Worker signature",
+  "clientSignature": "Client signature",
+  "yesDelete": "Yes, delete"
 }
